# terminal_file_manager

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  fileinfo.hpp  filemanagerui.cpp  filemanagerui.hpp  fileprocessor.cpp  main.cpp  uicontrol.hpp  utils.hpp
.github/workflows/: doxygen-pages.yml
cli/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/fileinfo/: duplicatefinder.hpp  fileinfo.hpp  fileprocessor.cpp  fileprocessor.hpp  fileprocessoradapter.cpp  fileprocessoradapter.hpp  filesafety.cpp  filesafety.hpp  filescanner.cpp  filescanner.hpp  fnv1a.hpp  ihashcalculator.hpp  nullbytesfinder.hpp
tests/: CMakeLists.txt  test_duplicatefinder.cpp  test_fileinfo.cpp  test_filesafety.cpp  test_filescanner.cpp
tui/: CMakeLists.txt  filemanagerui.cpp  filemanagerui.hpp  fileprocessoradapter.hpp  main.cpp  uicontrol.hpp  utils.hpp
utils/: utils.hpp
